Make findCurrentLeader async